アプリ設定ファイルの内容を整理しました。共通設定(ポート番号、ログレベルなど)を本体設定ファイルに移動して、データソースなど環境により異なる設定を環境設定ファイルに残しました。

--- a/diy-book-shelf-server/src/main/resources/application.properties
+++ b/diy-book-shelf-server/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-server.port=8081
+spring.profiles.active=dev
 
-spring.datasource.url=${DIY_BOOK_SHELF_DS_URL}
-spring.datasource.username=${DIY_BOOK_SHELF_DS_USER}
-spring.datasource.password=${DIY_BOOK_SHELF_DS_PASS}
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=50049
+
+info.name=${project.artifactId}
+info.version=${project.version}
 
 logging.level=DEBUG
