--- a/diy-book-shelf-server/src/test/resources/application.properties
+++ b/diy-book-shelf-server/src/test/resources/application.properties
@@ -1,1 +1,8 @@
 spring.profiles.active=dev
+
+server.port=50049
+
+info.name=${project.artifactId}
+info.version=${project.version}
+
+logging.level=DEBUG
