--- a/diy-book-shelf-server/pom.xml
+++ b/diy-book-shelf-server/pom.xml
@@ -47,6 +47,12 @@
             <version>5.1.38</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.190</version>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- testing -->
         <dependency>
@@ -58,12 +64,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.190</version>
             <scope>test</scope>
         </dependency>
         <dependency>
