--- a/diy-book-shelf-server/src/test/resources/application.properties
+++ b/diy-book-shelf-server/src/test/resources/application.properties
@@ -5,4 +5,5 @@ server.port=50049
 info.name=${project.artifactId}
 info.version=${project.version}
 
-logging.level=DEBUG
+logging.level.root=INFO
+logging.level.me.u6k=DEBUG
