実行可能jarを生成できるようにしました。

--- a/diy-book-shelf-server/pom.xml
+++ b/diy-book-shelf-server/pom.xml
@@ -85,6 +85,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>me.u6k.diy_book_shelf.server.App</mainClass>
+                    <executable>true</executable>
                 </configuration>
             </plugin>
             <plugin>
