--- a/diy-book-shelf-server/pom.xml
+++ b/diy-book-shelf-server/pom.xml
@@ -57,6 +57,12 @@
             <version>1.4.190</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.4.2</version>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- testing -->
         <dependency>
