`pom.xml`にプロパティを追加しました。このプロパティは、resourcesタスクでproperties内変数の置換に使用されます。

--- a/diy-book-shelf-server/pom.xml
+++ b/diy-book-shelf-server/pom.xml
@@ -23,6 +23,11 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <resource.logging.file>${DBS_LOGGING_FILE}</resource.logging.file>
+        <resource.datasource.url>${DBS_DATASOURCE_URL}</resource.datasource.url>
+        <resource.datasource.username>${DBS_DATASOURCE_USERNAME}</resource.datasource.username>
+        <resource.datasource.password>${DBS_DATASOURCE_PASSWORD}</resource.datasource.password>
     </properties>
 
     <dependencies>
