properties内の可変値を変数に変更しました。ビルド時に置換されます。

--- a/diy-book-shelf-server/src/main/resources/application.properties
+++ b/diy-book-shelf-server/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.profiles.active=dev
-
 server.port=50049
 
 info.name=${project.artifactId}
@@ -7,5 +5,13 @@ info.version=${project.version}
 
 logging.level.root=INFO
 logging.level.me.u6k=DEBUG
+logging.file=${resource.logging.file}
+
+spring.datasource.url=${resource.datasource.url}
+spring.datasource.username=${resource.datasource.username}
+spring.datasource.password=${resource.datasource.password}
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 management.context-path=/env
