--- a/diy-book-shelf-server/src/test/resources/application-staging.properties
+++ b/diy-book-shelf-server/src/test/resources/application-staging.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/diy_book_shelf_db
-spring.datasource.username=diy_book_shelf_user
-spring.datasource.password=diy_book_shelf_pass
+spring.datasource.url=${resource.datasource.url}
+spring.datasource.username=${resource.datasource.username}
+spring.datasource.password=${resource.datasource.password}
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
