--- a/diy-book-shelf-server/src/test/resources/application-dev.properties
+++ b/diy-book-shelf-server/src/test/resources/application-dev.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
