SQLログとパラメータ内容をログ出力するように設定しました。

--- a/diy-book-shelf-server/src/main/resources/application.properties
+++ b/diy-book-shelf-server/src/main/resources/application.properties
@@ -5,6 +5,8 @@ info.version=${project.version}
 
 logging.level.root=INFO
 logging.level.me.u6k=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 logging.file=${resource.logging.file}
 
 spring.datasource.url=${resource.datasource.url}
