--- a/diy-book-shelf-server/src/test/resources/application.properties
+++ b/diy-book-shelf-server/src/test/resources/application.properties
@@ -7,5 +7,7 @@ info.version=${project.version}
 
 logging.level.root=INFO
 logging.level.me.u6k=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 
 management.context-path=/env
